--- a/work.tex
+++ b/work.tex
@@ -2,10 +2,13 @@
 \begin{document}
 	\title{基于AIoT的智慧消防系统}
 	\section{项目方案概述}
-	我国当前智能化消防安全技术远远没有跟上城市急速发展的脚步，因此，我们使用NB-IoT、无线感知、目标检测等技术，将物联网与人工智能、大数据相结合，构建了一个系统的智能消防平台。在感知层部署烟雾、温湿度等传感器和摄像头，传感器通过NB-IoT协议接入核心网，向云平台上传感知数据。摄像头通过Wifi或有线的方式入网，向云平台上传视频数据。云平台通过分析多源数据，实现火灾预警、火源识别，并通过视频分析紧急出口的人流量，实现人员疏散的智能决策。在救援阶段，我们引入了无线感知技术，能够（待补充）。
+	我国当前智能化消防安全技术远远没有跟上城市急速发展的脚步，因此，我们使用NB-IoT、无线感知、目标检测等技术，将物联网与人工智能、大数据相结合，构建一个系统的智能消防平台。在感知层部署烟雾、温湿度等传感器和摄像头，传感器通过NB-IoT协议接入核心网，向云平台上传感知数据。摄像头通过Wifi或有线的方式入网，向云平台上传视频数据。云平台通过分析多源数据，实现火灾预警、火源识别，并通过视频分析紧急出口的人流量，实现人员疏散的智能决策。在救援阶段，我们引入了无线感知技术，能够（待补充）。
 	\section{项目团队}
 	\section{项目产品化}
 		\subsection{项目产品特性}
 			\subsubsection{基于NB-IoT的温湿度、烟雾感知}
-			NB--IoT
+			NB-IoT，全称为Narrow Band Internet of Things，中文名窄带物联网，是一个为万物互联打造的新的低功率广域网络。顾名思义，NB-IoT所占用的带宽很窄，只需约180KHz，而且其使用License频段，可采取带内、保护带或独立载波三种部署方式，与现有网络共存，并且能够直接部署在GSM、UMTS或LTE网络，即2/3/4G的网络上，实现现有网络的复用，降低部署成本，实现平滑升级。NB-IoT主要具备以下四大特点：1.广覆盖：相比现有的GSM、宽带LTE等网络覆盖增强了20dB，信号的传输覆盖范围更大（GSM基站目前理想状况下能覆盖35km），能覆盖到深层地下GSM网络无法覆盖到的地方。2.大连接：相比现有无线技术，同一基站下增多了50-100倍的接入数，每小区可以达到50K连接，真是实现万物互联所必须的海量连接。3.低功耗：终端在大部分时间内均处于休眠状态，并集成多种节电技术，待机时间最长可达10年。4.低成本：单NB-IoT通信模块成本不足5美元。因此，我们选择NB-IoT作为通信方式。\par
+			我们主要使用了DHT11和MQ-2传感器，DHT11负责采集温湿度、MQ-2负责采集烟雾浓度。
+			\subsubsection{基于深度学习的火焰识别和人流量监测}
+	\section{产品化实施计划}
 \end{document}
