--- a/work.tex
+++ b/work.tex
@@ -1,6 +1,7 @@
 \documentclass{ctexart}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
+\usepackage{subfigure}
 \pagestyle{fancy}
 \fancyhf{}
 
@@ -11,12 +12,15 @@
 	\section{项目方案概述}
 	目前，我国智能化消防安全技术远远没有跟上城市急速发展的脚步，因此，我们使用NB-IoT、无线感知、目标检测等技术，将物联网与人工智能、大数据相结合，构建一个系统的智能消防平台。在感知层部署烟雾、温湿度等传感器和摄像头，传感器通过NB-IoT协议接入核心网，向云平台上传感知数据。摄像头通过Wifi或有线的方式入网，向云平台上传视频数据。云平台通过分析多源数据，实现火灾预警、火源识别，并通过视频出分析紧急出口的人流量，实现人员疏散的智能决策。在救援阶段，我们引入了无线感知技术，能够（待补充）。
 	\section{项目团队}
+	刘中豪：负责NB-IoT节点的开发和云平台的开发，以及该部分的文档写作。\par
+	房建：负责基于深度学习的火焰识别功能和人流量监测功能的开发，以及该部分的文档写作。\par
+	李琳：负责无缘感知部分的调研和写作。\par
+	孙雨晴：负责市场的调研和项目商业模式的策划。\par
 	\section{项目产品化}
 	\subsection{项目产品特性}
 	\subsubsection{基于NB-IoT的温湿度、烟雾监控系统}
 	NB-IoT，全称为Narrow Band Internet of Things，中文名窄带物联网，是一个为万物互联打造的新的低功率广域网络。顾名思义，NB-IoT所占用的带宽很窄，只需约180KHz，而且其使用License频段，可采取带内、保护带或独立载波三种部署方式，与现有网络共存，并且能够直接部署在GSM、UMTS或LTE网络，即2/3/4G的网络上，实现现有网络的复用，降低部署成本，实现平滑升级。NB-IoT主要具备以下四大特点：1.广覆盖：相比现有的GSM、宽带LTE等网络覆盖增强了20dB，信号的传输覆盖范围更大（GSM基站目前理想状况下能覆盖35km），能覆盖到深层地下GSM网络无法覆盖到的地方。2.大连接：相比现有无线技术，同一基站下增多了50-100倍的接入数，每小区可以达到50K连接，真是实现万物互联所必须的海量连接。3.低功耗：终端在大部分时间内均处于休眠状态，并集成多种节电技术，待机时间最长可达10年。4.低成本：单NB-IoT通信模块成本不足5美元。因此，我们选择NB-IoT作为通信方式。\par
 	该系统的感知层负责采集温度、湿度和烟雾浓度等数据，通过NB-IoT协议接入核心网，通过CoAP协议接入云平台，将采集到的数据上报给云平台。同时，NB-IoT端设备还可以接受云平台下发的指令，并执行响应操作，如触发蜂鸣器警报。
-	%我们主要使用了DHT11和MQ-2传感器，DHT11负责采集温湿度、MQ-2负责采集烟雾浓度。如图1所示，我们使用的是EVB\_M1型号的开发板，开发板上搭载stm32微控制单元和BC35通信模块，通过一个类似于手机卡的物联网卡接入核心网，并与云平台通信。物联网端设备的功能是采集现场的温度、湿度和烟雾浓度等数据，并上报给云服务器。云服务器接收到数据后，保存数据、实现数据可视化并分析数据。
 	随着物联网的发展，数据量越来越多，各种数据驱动的算法不断应用到物联网系统中来，为用户提供更加便捷的服务，其中，预测性服务是重要的一项。在该系统中，物联网端设备在采集到数据后，仅进行简单的阈值判断，若感知到的数据超过阈值则发出警报。云平台具有更大的存储空间和更强的计算能力，可以基于各个节点采集的历史数据，使用机器学习算法，训练出一个火灾预警模型，该模型能够基于... \par
 	\subsubsection{基于深度学习的火焰识别和人流量监测系统}
 	随着深度学习的迅猛发展，计算机视觉也成为了目前人工智能领域落地最顺利的技术。计算机视觉(omputer  Vision)是一门研究如何用摄影机和计算机代替人眼对目标进行跟踪、识别、分析、处理等。经过多年的努力，使用计算机视觉软件和硬件算法部署深度学习技术的企业在识别对象方面都取得了一定程度的成功。
@@ -36,19 +40,53 @@
 	OceanConnect云平台是华为开发的IoT联接管理平台，通过该平台我们能够很轻易地实现设备的对接、管理和控制。该平台还提供了可视化的Web应用开发功能，我们基于该功能实现了传感器采集数据的实时可视化以及历史数据查看等功能，如图二所示。
 	\begin{figure}
 		\centering
-		\includegraphics[scale=0.2]{1.jpg}
+		\subfigure[]{
+			\includegraphics[width=5cm,height=4cm]{2.1.eps}
+		}
+		\subfigure[]{
+			\includegraphics[width=5cm,height=4cm]{2.2.eps}
+		}
 		\caption{Web应用}
-		\label{图2}
+		\label{Web Application}
 	\end{figure}
 	\subsubsection{基于深度学习的火焰识别和人流量监测系统的实现}
 	我们基于华为ModelArts深度学习平台和opencv等工具实现了基于深度学习的火焰识别和人流量监测。训练一个计算机视觉模型尤其是目标检测模型需要耗费大量的时间和计算资源，因此，我们使用了ModelArts平台部署我们训练好的深度学习模型，ModelArts是面向开发者的一站式AI开发平台，为机器学习与深度学习提供海量数据预处理及半自动化标注、大规模分布式Training、自动化模型生成，及端-边-云模型按需部署能力，帮助用户快速创建和部署模型，管理全周期AI工作流。我们使用YOLOv3算法作为目标检测模型，并在网上收集了300多张室内、室外的火灾图片进行标注，当做训练集，训练了一个火焰检测模型。边缘摄像头将视频数据上传至云服务器，然后云服务器调用ModelArts提供的结构进行视频中的火焰识别，识别效果如图三所示。\par
 	\begin{figure}
 		\centering
-		\includegraphics[scale=0.2]{1.jpg}
-		\caption{Web应用}
-		\label{图2}
+		\subfigure[]{
+			\includegraphics[width=5cm,height=4cm]{3.1.eps}
+		}
+		\subfigure[]{
+			\includegraphics[width=5cm,height=4cm]{3.2.eps}
+		}
+		\caption{火焰检测}
+		\label{火焰检测}
 	\end{figure}
-	同时我们还基于opencv库实现了人流量监测功能。整个系统的架构图如下所示。
+	同时我们还基于opencv库实现了人流量监测功能。整个系统的架构图如图4所示。
+	\begin{figure}
+		\centering
+		\includegraphics[scale=0.5]{4.eps}
+		\caption{基于AIoT的智慧消防系统架构}
+		\label{图1}
+	\end{figure}
+	\subsubsection{无缘感知}
+	待补充	
+	\section{项目产品市场与竞争}
+	\subsection{市场概述}
+	消防安全是全球发展的重要基础，消防安全关乎着社会安定，人民生命财产安全。消防作为安防领域最重要基础设施之一，是预防火灾、保护市民生命财产安全的重要屏障，也是“智慧城市”的重要组成部分。2018年全国共接报火灾23.7万起，造成1407人死亡、798人受伤、直接财产损失达36.75亿元。2017年10月10日，公安部消防局发布了《关于全面推进“智慧消防”建设的指导意见》，社会需求及相关文件直接反映出我国消防行业转型升级的紧迫性和重要性。2018年的一份全国火灾统计数据显示，从人员伤亡分布上看，住宅火灾亡人占火灾总量的近80\%，住宅的消防是重中之重。 \par
+	随着科技的进步，技术硬件条件的发展完善，国家政策的有力支持，运用物联网、大数据等技术手段的“智慧消防”应运而生，“智慧消防”需要实现实时、动态、互动、融合的消防信息的采集，传递，处理。全面促进与提高消防监督与管理水平，是人民生命财产安全的需要，也是市场的需要。
+	\subsection{竞争优势分析}
+	NB-IoT构建于蜂窝网络，只消耗大约180KHz的带宽，可直接部署于GSM、UMTS或LTE网络。NB-IoT具有以下几个特点：覆盖广：NB-IoT的覆盖能力是LTE的100倍。这样不但能够满足地广人稀地区的大范围覆盖需求，同样适用于对深度覆盖有要求的地下应用，即时在地下部署信号也不会衰减太多；连接多：相同基站覆盖条件下，NB-IoT技能是其它无线技能接入数的50至100倍，每个扇区能够保证接入10万个终端；功耗低：在针对许多使用电池供电的设备和局面，NB-IoT的低功耗特性能够保证设备续航时间，从几个月大幅提升到几年，因此大大降低了频繁更换电池带来的不便；成本低：由于选取授权频段上的蜂窝网络技能，NB-IoT无需重新建网，射频和天线也基本上都能够复用。再加上NB-IoT低功耗、低带宽和低速率的特性，同样降低了芯片和模组成本。目前NB=IoT已广泛应用在智能抄表、智能路灯控制、智能井盖、智能锁等场景。在智能消防中，系统需要采集温度、烟雾等数据上传至云平台，利用NB-IoT技术，可以实现整个系统的低成本和广覆盖。\par
+	如今的建筑中的消防系统，最常见的是基于烟感的消防系统，这些烟感设备需要与网关相连进行数据上报，以及与蜂鸣器等设备相连，因此这些消防系统往往需要繁琐的布线，这些布线的方案在建筑设计时就已经规划好。我们设计的系统中的温湿度、烟雾浓度等上报功能是基于NB-IoT协议实现的，端设备集NB-IoT通信模组、微控制单元、传感器或执行器（蜂鸣器等）于一体，无需与网关相连，设备直接接入核心网进行数据的上报，省去了繁琐的布线，部署十分方便。在“智慧城市”的“边缘”地带，比如一些较老的房屋、楼房，在设计时并没有考虑消防因素，如果是传统的消防系统，可能需要凿墙以进行繁琐的布线，同时还要考虑不影响房屋中的其他系统的使用。如果使用基于NB-IoT的系统，用户可以直接在需要监控的地方直接部署节点，无需繁琐的布线，十分地简单便捷。同时，基于用户的需求，也可以对相应的消防设施进行检测，比如使用水压和液位传感器监测消防水箱、使用压力传感器监测消防栓。确保消防设施的状态正常。\par
+	随着深度学习的迅猛发展，计算机视觉也成为了目前人工智能领域落地最顺利的技术。本产品中基于深度学习的火焰识别和人流量监测功能需要传输大流量的视频数据，因此使用WiFi接入云平台。火焰检测功能能够提取关键帧的关键部分，使监控人员了解着火点位置，从而进一步分析着火原因。人流量监测功能能够获取关键出入口的人员数量，在人口密度大的建筑中，有助于人员疏散的智能决策。
+	\subsection{项目实施风险及应对措施}
+	在项目实施过程中，节点面临着小概率软/硬件故障的风险。若节点发生故障，上报的数据会不可靠，可能会产生误报或不警报的情况，因此，我们需要建立相应的故障诊断系统。目前的故障诊断方案以数据驱动的方式为主，即利用历史数据分析出数据的时间、空间相关性，当数据的走势与历史数据的分析结果差异较大时，说明节点可能发生了故障。\par
+	在这种基于云的架构中，网络拥塞时可能会产生较大的响应时延。在消防系统中，时间至关重要。我们可以采用边缘计算的方式对架构进行优化，在距离节点的物理或逻辑距离较近的地方部署具有较高存储和计算能力的服务器，处理一些需要实时响应的任务。
+	\section{商业模式}
+	\section{预期经济效应分析}
+	
+	
+	
 	
 	
 \end{document}
